--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
   "name": "ecommerce-full-server",
   "packageManager": "yarn@4.3.1",
+  "type":"module",
+  "author": "Ambar Canonicco",
+  "repository": "https://github.com/Ambarella-VE/ecommerce-full-server.git",
   "dependencies": {
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "cli-color": "^2.0.4",
+    "node-emoji": "^2.1.3",
+    "nodemon": "^3.1.4"
+  },
+  "scripts": {
+    "start": "node ./server.js",
+    "dev": "nodemon ./server.js"
   }
 }
